[package]
name = "rusty_voxel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.160", features = ["derive"]}
glam = "0.24.0"
glium = "0.32.1"
winit = "0.28.6"
keyboard-types = "0.6.2"
noise = "0.8.2"
quaternion = "1.0.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
async-trait = "0.1.7"
futures = "0.3.28"
renderdoc = "0.11.0"
env_logger = "0.10"
log = "0.4.17"
wgpu = "0.16.0"
lazy_static = "1.4.0"
bytemuck = "1.13.1"
bitflags = "2.3.1"
multiarray = "0.1.3"
boson = "0.12.0"
vulkano = "0.33.0"

[profile.dev]
opt-level = 1 